# EndGame

./: .Rbuildignore  .gitignore  247_cfb.R  DESCRIPTION  NAMESPACE  README.md  cfb_teams.R  ncaa_fb.R  ncaambb.R  ncaambb_play_by_play.R  ncaawbb.R  nfl_games.R  save_all.R
.github/workflows/: on_push.yml
R/: 247_cbf_recruiting.R  get.R  ncaa_bb.R  ncaa_fb.R  ncaam_bb.R  nfl.R  parse.R  progress.R  utils.R
applications/ncaaf/: 247_cfb.R  README.md  RealTeams.Rmd  RealTeams.html  Recruiting.Rmd  Recruiting.html  Untitled.Rmd  cfb_teams.R  ncaa_fb.R
checker/: ncaafb.R  nfl.R
cloud_infrastructure/: .gitignore  Makefile  main.tf  output.tf
cloud_infrastructure/.devcontainer/: Dockerfile  devcontainer.json
jobs/: main.tf  variables.tf
jobs/.devcontainer/: Dockerfile  devcontainer.json
jobs/modules/scheduled_job/: main.tf  outputs.tf  variables.tf
man/: get_247_fb_recuriting_ratings.Rd  get_cached_html.Rd  get_ncaa_season.Rd  get_nfl_season.Rd  map_with_progress.Rd
matcher/: setup.py
matcher/endgame_matcher/: __init__.py  sports247_to_espn.py  sports247_to_espn_test.py  testing.py
py-endgame/: .gitignore  README.md  pyproject.toml  setup.py
py-endgame-aws/: .copier-answers.yml  .gitignore  Makefile  main.py  main_test.py  pyproject.toml
py-endgame-aws/.devcontainer/: Dockerfile  devcontainer.json
py-endgame-aws/.github/workflows/: on_push.yml
py-endgame-aws/endgame_aws/: __init__.py  config.py  io.py  stores.py  stores_test.py
py-endgame/.devcontainer/: Dockerfile  devcontainer.json
py-endgame/endgame/: async_tools.py  cacheable.py  cli.py  config.py  constants.py  date.py  espn_games.py  espn_odds.py  logger.py  ncaabb.py  ncaafb.py  nfl.py  parse_football.py  season_cache.py  types.py  web.py
py-endgame/endgame/ncaabb/: __init__.py  box_score.py  gender.py  matchup.py  ncaabb.py  ncaabb_test.py  plays.py  plays_test.py  possession_side.py
py-endgame/endgame/ncaabb/box_score/: __init__.py  all.py  player.py
py-endgame/endgame/nfl/: __init__.py  cities.py  coaches.py  games.py  spread.py  spread_test.py  teams.py
py-endgame/integration_tests/: betting_test.py
py-launcher/: .gitignore  README.md  pyproject.toml
py-launcher/.devcontainer/: Dockerfile  devcontainer.json
py-launcher/endgame_launcher/: main.py  plays_backfill.py
spot_checks/: README.md  ncaambb.R
tests/: testthat.R
tests/testthat/: test-parse.R
