[tool.poetry]
name = "endgame-aws"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fire = ">=0.4.0,<1.0"
aiobotocore = "^2.4.0"
endgame = {git = "https://github.com/NathanDeMaria/EndGame.git", rev = "c76e2cee5b8bbb005f06f021e404a3a9b7247fd1", subdirectory = "py-endgame"}
dataclasses-json = ">=0.5.7,<1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pylint = "^2.15.5"
mypy = "^1.8.0"
types-aiobotocore = {extras = ["essential"], version = "^2.4.0"}
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
endgame-aws = "endgame_aws.cli:main"

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
# no stubs for fire :(
module = ["fire"]
ignore_missing_imports = true
