[tool.poetry]
name = "endgame-aws"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fire = ">=0.4.0,<1.0"
aiobotocore = "^3.2.1"
endgame = {git = "https://github.com/NathanDeMaria/EndGame.git", rev = "98e0f02e7e1f9729f23a1b75d68573c506fa3c6d", subdirectory = "py-endgame"}
dataclasses-json = ">=0.5.7,<1.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest = "^9.0.2"
pylint = "^4.0.5"
mypy = "^1.19.1"
types-aiobotocore = {extras = ["essential"], version = "^3.2.1"}
ipykernel = "^7.2.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
endgame-aws = "endgame_aws.cli:main"

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
# no stubs for fire :(
module = ["fire"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
