[tool.poetry]
name = "endgame"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.6.0"
aiohttp = "^3.7.4"
fire = "^0.4.0"
python-dateutil = "^2.8.1"
beautifulsoup4 = "^4.9.3"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.1"
pylint = "^2.6.0"
mypy = "^0.782"

[tool.poetry.scripts]
endgame = "endgame.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
