[tool.poetry]
name = "endgame"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
fire = "^0.4.0"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.10.0"
dataclasses-json = "^0.5.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
pylint = "^2.12.2"
mypy = "^0.931"

[tool.poetry.scripts]
endgame = "endgame.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
