[tool.poetry]
name = "endgame"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
fire = ">=0.7.0,<1"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.10.0"
dataclasses-json = "^0.5.6"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
pytest = "^8.3.5"
pylint = "^2.12.2"
mypy = "^1.9.0"
types-aiofiles = "^23.2.0"
types-python-dateutil = "^2.9.0"
types-beautifulsoup4 = "^4.12.0"
ipykernel = "^6.29.5"
typing-extensions = ">=4.4.0"
pytest-asyncio = "^0.26.0"

[tool.poetry.scripts]
endgame = "endgame.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
# no stubs for fire :(
module = ["fire"]
ignore_missing_imports = true
