[tool.poetry]
name = "endgame-launcher"
version = "0.1.0"
description = "EndGame Launcher Application"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
batch-core = {git = "https://github.com/NathanDemaria/aws-batch-optimization.git", rev = "587a6c3dc962c37568dc187dfa2adea13c5f8b41", subdirectory = "batch-core"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
